Added theme support - Light Dark and High Contrast

--- a/src/html/asl.html
+++ b/src/html/asl.html
@@ -17,11 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>ASL</h1>
-        <h2>Arithmetic Shift Left</h2>
-        <h2>Operation: C &lt;= <span style="background-color: #867BE4;">7 6 5 4 3 2 1 0</span> &lt;= 0</h2>
+        <div id="header-text">
+          <h1>ASL</h1>
+          <h2>Arithmetic Shift Left</h2>
+          <h2>Operation: C &lt;= <span style="background-color: #867BE4;">7 6 5 4 3 2 1 0</span> &lt;= 0</h2>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -90,7 +91,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&#10003;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
