--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,8 +18,11 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>Welcome to C64 Opcodes<br>Extension for VSCode</h1>
+        <div id="header-text">
+          <h1>Welcome to C64 Opcodes<br>Extension for VSCode</h1>
+        </div>
       </div>
+
       <div id="sidebar">
         <button title="View List of All C64 Opcodes" class="button buttonMAIN" onclick="cmdVIEWALL()">View All Opcodes List</button><br>
         <button title="View List of All Processor Flags" class="button buttonMAIN" onclick="cmdPFLAGS()">Processor Flags</button><br>
