--- a/src/html/adc.html
+++ b/src/html/adc.html
@@ -17,12 +17,14 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>ADC</h1>
-        <h3>Add Memory to Accumulator with Carry</h3>
-        <h3>Operation: A + M + C => A, C</h3>
+        <div id="header-text">
+          <h1>ADC</h1>
+          <h3>Add Memory to Accumulator with Carry</h3>
+          <h3>Operation: A + M + C => A, C</h3>
+        </div>
       </div>
 
-      <div class="opcode-table">
+      <div class="opcode-table ">
         <table class='modes'>
           <tr>
             <th>
@@ -110,7 +112,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&#10003;</td>
                   <td>&#10003;</td>
                   <td>&nbsp;</td>
@@ -126,12 +128,12 @@
         </table>
       </div>
 
-      <div class="opcode-flags">
+      <div class="opcode-flags ">
         <p>+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has it's most significant bit set (not in decimal mode).<br>The overflow flag is set if the operation results in an overflow (not in decimal mode).
           <br>The zero flag is set if the result is zero, or cleared if it is non-zero (not in decimal mode).<br>The carry flag is set if the addition resulted in an outgoing carry.</p>
       </div>
 
-      <div class="opcode-text">
+      <div class="opcode-text ">
         <p>
           Adds the contents of any number contained in memory specified by the operand with the content of the accumulator plus the current state of the Carry flag, updating it after the operation.
         </p>
@@ -155,32 +157,32 @@
         </p>
       </div>
 
-      <div class="codeblock">
+      <div class="codeblock ">
         <pre>
-    <span style="color: #eeeb42; font-weight: bold">clc</span><span style="color: #83f383;">              // C = 0</span>
-    <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: white;"> LOWBYTE </span><span style="color: #83f383;">     // a = LOWBYTE</span>
-    <span style="color: #eeeb42; font-weight: bold">adc</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$10</span><span style="color: #83f383;">         // a = a + $10 + C</span>
-    <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: white;"> LOWBYTE </span><span style="color: #83f383;">     // LOWBYTE = a</span>
-    <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: white;"> HIBYTE </span><span style="color: #83f383;">      // a = HIBYTE</span>
-    <span style="color: #eeeb42; font-weight: bold">adc</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$05</span><span style="color: #83f383;">         // a = a + $05 + C</span>
-    <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: white;"> HIBYTE </span><span style="color: #83f383;">      // HIBYTE = a</span>
+    <span style="color: #eeeb42; font-weight: bold ">clc</span><span style="color: #83f383; ">              // C = 0</span>
+    <span style="color: #eeeb42; font-weight: bold ">lda</span><span style="color: white; "> LOWBYTE </span><span style="color: #83f383; ">     // a = LOWBYTE</span>
+    <span style="color: #eeeb42; font-weight: bold ">adc</span><span style="color: salmon; "> #</span><span style="color: #87daf3 ">$10</span><span style="color: #83f383; ">         // a = a + $10 + C</span>
+    <span style="color: #eeeb42; font-weight: bold ">sta</span><span style="color: white; "> LOWBYTE </span><span style="color: #83f383; ">     // LOWBYTE = a</span>
+    <span style="color: #eeeb42; font-weight: bold ">lda</span><span style="color: white; "> HIBYTE </span><span style="color: #83f383; ">      // a = HIBYTE</span>
+    <span style="color: #eeeb42; font-weight: bold ">adc</span><span style="color: salmon; "> #</span><span style="color: #87daf3 ">$05</span><span style="color: #83f383; ">         // a = a + $05 + C</span>
+    <span style="color: #eeeb42; font-weight: bold ">sta</span><span style="color: white; "> HIBYTE </span><span style="color: #83f383; ">      // HIBYTE = a</span>
         </pre>
       </div>
 
-      <div class="opcode-text">
+      <div class="opcode-text ">
         <p>
           Note: There is no way to add without the carry.
         </p>
       </div>
 
-      <div id="navigation">
+      <div id="navigation ">
         <h2>Navigation:</h2>
-        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-        <button title="View List of All Math Instructions" class="button buttonNAVIGATION" onclick="cmdMATH()">Math Instructions</button>
+        <button title="Return to Home Page " class="button buttonNAVIGATION " onclick="cmdHOME() ">Home</button>
+        <button title="View List of All C64 Opcodes " class="button buttonNAVIGATION " onclick="cmdVIEWALL() ">View All Opcodes List</button>
+        <button title="View List of All Math Instructions " class="button buttonNAVIGATION " onclick="cmdMATH() ">Math Instructions</button>
       </div>
     </div>
-    <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
+    <footer id="footer ">C64 Opcodes Extension, By WillASM</footer>
   </div>
 </body>
 
