--- a/src/html/and.html
+++ b/src/html/and.html
@@ -17,11 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>AND</h1>
-        <h2>Bitwise AND with Accumulator</h2>
-        <h2>Operation: A & M => A</h2>
+        <div id="header-text">
+          <h1>AND</h1>
+          <h2>Bitwise AND with Accumulator</h2>
+          <h2>Operation: A & M => A</h2>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -111,7 +112,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&#10003;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
@@ -132,7 +133,8 @@
       </div>
 
       <div class="opcode-text">
-        <p>Performs a logical AND between the bits of the accumulator and that of the operand specified (next byte of the opcode in immediate addressing). The result of AND operations will be 1 only when both bits compared are 1, else will be always 0.</p>
+        <p>Performs a logical AND between the bits of the accumulator and that of the operand specified (next byte of the opcode in immediate addressing). The result of AND operations will be 1 only when both bits compared are 1, else will be always 0.
+        </p>
 
         <p>A common usage for this instruction is to deactivate (reset) a particular bit or set of bits within a bit mask, i.e. puting zeros in the bit places we want to reset (bit = 0) and ones in the places we want to be unaltered. To activate bits we
           will use ora with a the contrary bit patter for the mask: one in the bits we need to activate and zeros in the bits we need to be unaltered.</p>
