--- a/src/html/bit.html
+++ b/src/html/bit.html
@@ -17,11 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>BIT</h1>
-        <h2 style="text-align:center;">Test bits in memory with accumulator</h2>
-        <h2 style="text-align:center;">Operation: A &amp; M, M7 =&gt; N, M6 =&gt; V</h2>
+        <div id="header-text">
+          <h1>BIT</h1>
+          <h2 style="text-align:center;">Test bits in memory with accumulator</h2>
+          <h2 style="text-align:center;">Operation: A &amp; M, M7 =&gt; N, M6 =&gt; V</h2>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -69,7 +70,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&#10003;</td>
                   <td>&#10003;</td>
                   <td>&nbsp;</td>
@@ -86,7 +87,8 @@
       </div>
 
       <div class="opcode-flags">
-        <p>The negative status flag is set if the result is negative, i.e. has its most significant bit set.<br>The overflow status flag is set if the operation results in an overflow.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+        <p>The negative status flag is set if the result is negative, i.e. has its most significant bit set.<br>The overflow status flag is set if the operation results in an overflow.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.
+        </p>
       </div>
 
       <div class="opcode-text">
