--- a/src/html/brk.html
+++ b/src/html/brk.html
@@ -17,12 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>BRK</h1>
-        <h2 style="text-align:center;">Forced Break</h2>
-        <h4 style="text-align:center;">Operation: Forces software interrupt</h4>
-        <h4 style="text-align:center;">transfer to stack PC+2 and P</h4>
+        <div id="header-text">
+          <h1>BRK</h1>
+          <h2 style="text-align:center;">Forced Break</h2>
+          <h4 style="text-align:center;">Operation: Forces interrupt transfer to stack PC+2 and P</h5>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -63,7 +63,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
