--- a/src/html/dec.html
+++ b/src/html/dec.html
@@ -17,11 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>DEC</h1>
-        <h2 style="text-align:center;">DECrement memory by one</h2>
-        <h2 style="text-align:center;">Operation: M - 1 =&gt; M</h2>
+        <div id="header-text">
+          <h1>DEC</h1>
+          <h2 style="text-align:center;">DECrement memory by one</h2>
+          <h2 style="text-align:center;">Operation: M - 1 =&gt; M</h2>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -83,7 +84,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&#10003;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
