--- a/src/html/php.html
+++ b/src/html/php.html
@@ -17,11 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>PHP</h1>
-        <h2 style="text-align:center;">PusH Processor status on stack</h2>
-        <h2 style="text-align:center;">Operation: Push P into the stack</h2>
+        <div id="header-text">
+          <h1>PHP</h1>
+          <h2 style="text-align:center;">PusH Processor status on stack</h2>
+          <h2 style="text-align:center;">Operation: Push P into the stack</h2>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -62,7 +63,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
