--- a/src/html/pla.html
+++ b/src/html/pla.html
@@ -17,11 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>PLA</h1>
-        <h2 style="text-align:center;">PulL Accumulator from stack</h2>
-        <h4 style="text-align:center;">Operation: Extracts a byte from the stack and loads it into Accumulator</h4>
+        <div id="header-text">
+          <h1>PLA</h1>
+          <h2 style="text-align:center;">PulL Accumulator from stack</h2>
+          <h5 style="text-align:center;">Operation: Pulls a byte from the stack into the Accumulator</h5>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -62,7 +63,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&#10003;</td>
                   <td>&nbsp;</td>
                   <td>&nbsp;</td>
