--- a/src/html/plp.html
+++ b/src/html/plp.html
@@ -17,11 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>PLP</h1>
-        <h2 style="text-align:center;">PulL Processor status from stack</h2>
-        <h4 style="text-align:center;">Operation: Pulls a byte from stack and puts it in P</h4>
+        <div id="header-text">
+          <h1>PLP</h1>
+          <h2 style="text-align:center;">PulL Processor status from stack</h2>
+          <h4 style="text-align:center;">Operation: Pulls a byte from stack and puts it in P</h4>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -62,7 +63,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>?</td>
                   <td>?</td>
                   <td>?</td>
