--- a/src/html/sbc.html
+++ b/src/html/sbc.html
@@ -17,11 +17,12 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>SBC</h1>
-        <h2 style="text-align:center;">SuBstract memory from accumulator with borrow</h2>
-        <h2 style="text-align:center;">Operation: A - M - !C =&gt; A</h2>
+        <div id="header-text">
+          <h1>SBC</h1>
+          <h3 style="text-align:center;">SuBstract memory from accumulator with borrow</h3>
+          <h3 style="text-align:center;">Operation: A - M - !C =&gt; A</h3>
+        </div>
       </div>
-      <br><br>
 
       <div class="opcode-table">
         <table class='modes'>
@@ -111,7 +112,7 @@
                   <td>Z</td>
                   <td>C</td>
                 </tr>
-                <tr style="color: olivedrab;">
+                <tr>
                   <td>&#10003;</td>
                   <td>&#10003;</td>
                   <td>&nbsp;</td>
