--- a/src/html/template.html
+++ b/src/html/template.html
@@ -17,12 +17,13 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>OPCODE</h1>
-        <h2 style="text-align:center;">Description</h2>
-        <h2 style="text-align:center;">Operation:</h2>
-        <br><br>
-
+        <div id="header-text">
+          <h1>OPCODE</h1>
+          <h2 style="text-align:center;">Description</h2>
+          <h2 style="text-align:center;">Operation:</h2>
+        </div>
       </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
