--- a/src/html/test.html
+++ b/src/html/test.html
@@ -18,8 +18,11 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>TEST HEADER TEXT</h1>
+        <div id="header-text">
+          <h1>TEST HEADER TEXT</h1>
+        </div>
       </div>
+
       <div id="sidebar">
         test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit
       </div>
