--- a/src/html/bcc.html
+++ b/src/html/bcc.html
@@ -99,7 +99,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
              <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: salmon;"> #</span><span style="color: powderblue;">$32</span><span style="color: #83f383;">            // Loads the number $32 in</span>
              <span style="color: #83f383;">                    //  the accumulator</span>
              <span style="color: #eeeb42; font-weight: bold">cmp</span><span style="color: white;"> value1 </span><span style="color: #83f383;">         // compare $32 with value1</span>
@@ -125,7 +125,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
        <span style="color: #eeeb42; font-weight: bold">clc</span><span style="color: #83f383;">          // C = 0</span>
        <span style="color: #eeeb42; font-weight: bold">bcc</span><span style="color: white;"> jump </span><span style="color: #83f383;">    // This is a relative jmp (forced)</span>
             <span style="color: #83f383;">        // Which makes this part of the routine</span>
