--- a/src/html/bcs.html
+++ b/src/html/bcs.html
@@ -98,7 +98,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
                   <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: salmon;"> #</span><span style="color: powderblue;">$20</span><span style="color: #83f383;">            // Loads the number $20 in the</span>
                   <span style="color: #83f383;">                    //  accumulator.</span>
                   <span style="color: #eeeb42; font-weight: bold">cmp</span><span style="color: white;"> value1 </span><span style="color: #83f383;">         // compare $20 with value1</span>
@@ -123,7 +123,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
          <span style="color: #eeeb42; font-weight: bold">sec</span><span style="color: #83f383;">          // C = 1</span>
          <span style="color: #eeeb42; font-weight: bold">bcs</span><span style="color: white;"> jump </span><span style="color: #83f383;">    // This is a relative jmp (forced)</span>
               <span style="color: #83f383;">        // Which makes this part of the routine</span>
