--- a/src/html/bne.html
+++ b/src/html/bne.html
@@ -97,7 +97,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
          <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: white;"> value1 </span><span style="color: #83f383;">   // Loads value1 in accumulator</span>
          <span style="color: #eeeb42; font-weight: bold">cmp</span><span style="color: white;"> value2 </span><span style="color: #83f383;">   // Compares value1 with value2 (in accumulator)</span>
          <span style="color: #eeeb42; font-weight: bold">bne</span><span style="color: white;"> unequal </span><span style="color: #83f383;">  // If unequal, jump to unequal</span>
