--- a/src/html/bvc.html
+++ b/src/html/bvc.html
@@ -99,7 +99,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
        <span style="color: #eeeb42; font-weight: bold">clv</span><span style="color: #83f383;">          // V = 0</span>
        <span style="color: #eeeb42; font-weight: bold">bvc</span><span style="color: white;"> jump </span><span style="color: #83f383;">    // This branch is relative (forced)</span>
        <span style="color: #83f383;">             // makes this part relocatable in memory.</span>
