--- a/src/html/cld.html
+++ b/src/html/cld.html
@@ -83,6 +83,8 @@
         <p>Deactivates Decimal Mode, D = 0. See SED for more details.</p>
       </div>
 
+      <div style="padding-bottom: 40vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
