--- a/src/html/cpy.html
+++ b/src/html/cpy.html
@@ -107,7 +107,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
     <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: salmon;"> #</span><span style="color: powderblue;">$25</span><span style="color: #83f383;">       // a = $25</span>
     <span style="color: #eeeb42; font-weight: bold">cpy</span><span style="color: white;"> value </span><span style="color: #83f383;">     // Modify N, Z and C accordingly to the</span>
     <span style="color: #83f383;">               //  result of the "substraction".</span>
