--- a/src/html/dec.html
+++ b/src/html/dec.html
@@ -108,6 +108,8 @@
         <p>Decrements the content of a memory address by one.</p>
       </div>
 
+      <div style="padding-bottom: 20vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
