--- a/src/html/eor.html
+++ b/src/html/eor.html
@@ -141,7 +141,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
         <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: white;"> value </span><span style="color: #83f383;">      // Loads a value in accumulator (init. value=0)</span>
         <span style="color: #eeeb42; font-weight: bold">eor</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$FF</span><span style="color: #83f383;">        // Invert bits of accumulator</span>
         <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: white;"> value </span><span style="color: #83f383;">      // Updates value ($00 or $FF alternatively)</span>
