--- a/src/html/jmp.html
+++ b/src/html/jmp.html
@@ -92,6 +92,8 @@
           You could use this for example to add new basic commands, like Simon's Basic did.</p>
       </div>
 
+      <div style="padding-bottom: 23vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
