--- a/src/html/ora.html
+++ b/src/html/ora.html
@@ -141,7 +141,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
   <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: white;"> value </span><span style="color: #83f383;">       // Loads value in Accumulator</span>
   <span style="color: #eeeb42; font-weight: bold">ora</span><span style="color: salmon;"> #</span><span style="color: powderblue;">%00100000</span><span style="color: #83f383;">   // mask: one in bit 5, zeros in the other bits.</span>
   <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: white;"> value </span><span style="color: #83f383;">       // Updates value (with bit 5 on)</span>
