--- a/src/html/pha.html
+++ b/src/html/pha.html
@@ -93,7 +93,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
     <span style="color: #eeeb42; font-weight: bold">pha</span><span style="color: #83f383;">       // Save Accumulator into the stack.</span>
     <span style="color: #eeeb42; font-weight: bold">txa</span><span style="color: #83f383;">       // Transfer X to the Accumulator.</span>
     <span style="color: #eeeb42; font-weight: bold">pha</span><span style="color: #83f383;">       // Save X in the stack through Accumulator.</span>
