--- a/src/html/plp.html
+++ b/src/html/plp.html
@@ -83,6 +83,8 @@
         <p>PLP 'affects' potentially all seven processor status flags, and in theory even the unused bit #5 in the byte formed by the flags, since a new "state" for each flag is retrieved from the stack.</p>
       </div>
 
+      <div style="padding-bottom: 38vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
