--- a/src/html/sbc.html
+++ b/src/html/sbc.html
@@ -150,7 +150,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
     <span style="color: #eeeb42; font-weight: bold">sec</span><span style="color: #83f383;">              // C = 1</span>
     <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: white;"> LOWBYTE </span><span style="color: #83f383;">     // a = LOWBYTE</span>
     <span style="color: #eeeb42; font-weight: bold">sbc</span><span style="color: salmon;"> #</span><span style="color: #87daf3">$10</span><span style="color: #83f383;">         // a = a - $10 - C</span>
