--- a/src/html/sec.html
+++ b/src/html/sec.html
@@ -87,6 +87,8 @@
         <p>This instruction is primarily necessary to facilitate the use of the instruction SBC, or to force relative branches using BCC and BCS.</p>
       </div>
 
+      <div style="padding-bottom: 32vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
