--- a/src/html/viewall.html
+++ b/src/html/viewall.html
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <div class="wrapper">
+      <div class="view-all-grid">
         <div><button title="Add Memory to Accumulator with Carry" class="button buttonOPCODE" onclick="cmdADC()">ADC</button></div>
         <div><button title="Bitwise AND with Accumulator" class="button buttonOPCODE" onclick="cmdAND()">AND</button></div>
         <div><button title="Arithmetic Shift Left" class="button buttonOPCODE" onclick="cmdASL()">ASL</button></div>
@@ -80,6 +80,7 @@
         <div><button title="Transfer index X to Stack pointer" class="button buttonOPCODE" onclick="cmdTXS()">TXS</button></div>
         <div><button title="Transfer index Y to Accumulator" class="button buttonOPCODE" onclick="cmdTYA()">TYA</button></div>
       </div>
+      <br>
 
       <div><button id="illegal-button" title="View List of All Illegal Instructions" class="button buttonMAIN" onclick="cmdILLEGAL()">View Illegal Instructions</button></div>
 
