--- a/src/html/and.html
+++ b/src/html/and.html
@@ -143,7 +143,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
     <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: white;"> value </span><span style="color: #83f383;">       // Loads value in Accumulator</span>
     <span style="color: #eeeb42; font-weight: bold">and</span><span style="color: salmon;"> #</span><span style="color: powderblue;">%11011111</span><span style="color: #83f383;">   // Mask: zero in bit 5, ones in the others.</span>
     <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: white;"> value </span><span style="color: #83f383;">       // Updates value (with bit 5 off)</span>
