--- a/src/html/beq.html
+++ b/src/html/beq.html
@@ -97,7 +97,7 @@
       </div>
 
       <div class="codeblock">
-        <pre style="margin: 0;">
+        <pre>
         <span style="color: #eeeb42; font-weight: bold">lda</span><span style="color: white;"> value1 </span><span style="color: #83f383;">  // Loads value1 in accumulator</span>
         <span style="color: #eeeb42; font-weight: bold">cmp</span><span style="color: white;"> value2 </span><span style="color: #83f383;">  // Compares value1 with value2 (in accumulator)</span>
         <span style="color: #eeeb42; font-weight: bold">beq</span><span style="color: white;"> equals </span><span style="color: #83f383;">  // If equal, branch to equals</span>
