--- a/src/html/bit.html
+++ b/src/html/bit.html
@@ -99,6 +99,8 @@
         <p>Is a form of testing important bits in the accumulator without affecting its contents, as would happen if we did this with and.</p>
       </div>
 
+      <div style="padding-bottom: 9vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
