--- a/src/html/bitwise.html
+++ b/src/html/bitwise.html
@@ -17,14 +17,25 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1 style="text-align:center; padding-top: 40px;">Bitwise Instructions<br>Placeholder</h1>
+        <h1 id="header-text">Bitwise Instructions</h1>
       </div>
-      <div class="AllButtonBack"><br>
-        <button title="WIP" class="button buttonOPCODE" onclick="cmdHOME()">WIP</button>
+
+      <div class="bitwise-grid">
+        <div><button title="Bitwise AND with Accumulator" class="button buttonOPCODE" onclick="cmdAND()">AND</button></div>
+        <div><button title="Arithmetic Shift Left" class="button buttonOPCODE" onclick="cmdASL()">ASL</button></div>
+        <div><button title="Exclusive - OR memory with accumulator" class="button buttonOPCODE" onclick="cmdEOR()">EOR</button></div>
+        <div><button title="Shift right one bit, memory or accumulator" class="button buttonOPCODE" onclick="cmdLSR()">LSR</button></div>
+        <div><button title="'OR' memory with accumulator" class="button buttonOPCODE" onclick="cmdORA()">ORA</button></div>
+        <div><button title="Rotate One bit Left - Memory or Accumulator" class="button buttonOPCODE" onclick="cmdROL()">ROL</button></div>
+        <div><button title="Rotate One bit Right - memory or accumulator" class="button buttonOPCODE" onclick="cmdROR()">ROR</button></div>
       </div>
+
+      <div style="padding-bottom: 59vh;"></div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
         <footer>
       </div>
     </div>
