--- a/src/html/brk.html
+++ b/src/html/brk.html
@@ -93,6 +93,8 @@
         <p>Note: a BRK instruction cannot be masked touching the I flag.</p>
       </div>
 
+      <div style="padding-bottom: 13vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
