--- a/src/html/clc.html
+++ b/src/html/clc.html
@@ -87,6 +87,8 @@
         <p>This instruction exists mainly to facilitate operations with the instruction ADC, or to force relative branches using BCC and BCS.</p>
       </div>
 
+      <div style="padding-bottom: 32vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
