--- a/src/html/cli.html
+++ b/src/html/cli.html
@@ -83,6 +83,8 @@
         <p>Resets the interrupt disable flag, I = 0, so (maskable) interrupts are allowed.</p>
       </div>
 
+      <div style="padding-bottom: 40vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
@@ -94,4 +96,4 @@
   </div>
 </body>
 
-</html>NAVIGATION
+</html>
