--- a/src/html/clv.html
+++ b/src/html/clv.html
@@ -87,6 +87,8 @@
         <p>Note: There does not exist an equivalent instruction to put this flag to 1</p>
       </div>
 
+      <div style="padding-bottom: 34vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
