--- a/src/html/compare.html
+++ b/src/html/compare.html
@@ -17,14 +17,22 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1 style="text-align:center; padding-top: 40px;">Compare Instructions<br>Placeholder</h1>
+        <h1 id="header-text">Compare Instructions</h1>
       </div>
-      <div class="AllButtonBack"><br>
-        <button title="WIP" class="button buttonOPCODE" onclick="cmdHOME()">WIP</button>
+
+      <div class="compare-grid">
+        <div><button title="Test bits in memory with accumulator" class="button buttonOPCODE" onclick="cmdBIT()">BIT</button></div>
+        <div><button title="CoMPare Memory with accumulator" class="button buttonOPCODE" onclick="cmdCMP()">CMP</button></div>
+        <div><button title="ComPare memory and index X" class="button buttonOPCODE" onclick="cmdCPX()">CPX</button></div>
+        <div><button title="ComPare memory and index Y" class="button buttonOPCODE" onclick="cmdCPY()">CPY</button></div>
       </div>
+
+      <div style="padding-bottom: 64vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
       </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
