--- a/src/html/flag.html
+++ b/src/html/flag.html
@@ -17,14 +17,25 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1 style="text-align:center; padding-top: 40px;">Flag Instructions<br>Placeholder</h1>
+        <h1 id="header-text">Flag Instructions</h1>
       </div>
-      <div class="AllButtonBack"><br>
-        <button title="WIP" class="button buttonOPCODE" onclick="cmdHOME()">WIP</button>
+
+      <div class="flag-grid">
+        <div><button title="CLear Carry flag" class="button buttonOPCODE" onclick="cmdCLC()">CLC</button></div>
+        <div><button title="CLear Decimal mode" class="button buttonOPCODE" onclick="cmdCLD()">CLD</button></div>
+        <div><button title="Clear Interrupt disable bit" class="button buttonOPCODE" onclick="cmdCLI()">CLI</button></div>
+        <div><button title="Clear OVerflow flag" class="button buttonOPCODE" onclick="cmdCLV()">CLV</button></div>
+        <div><button title="SEt Carry Flag" class="button buttonOPCODE" onclick="cmdSEC()">SEC</button></div>
+        <div><button title="SEt Decimal mode" class="button buttonOPCODE" onclick="cmdSED()">SED</button></div>
+        <div><button title="Set Interrupt disable status" class="button buttonOPCODE" onclick="cmdSEI()">SEI</button></div>
       </div>
+
+      <div style="padding-bottom: 59vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
       </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
