--- a/src/html/inx.html
+++ b/src/html/inx.html
@@ -87,6 +87,8 @@
         <p>Increments the contents of the X index register by one.</p>
       </div>
 
+      <div style="padding-bottom: 32vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
