--- a/src/html/jsr.html
+++ b/src/html/jsr.html
@@ -89,6 +89,8 @@
           a subroutine need to be optimized for speed since the -undivisible- JSR/RTS pair is expensive in terms of clock cycles.</p>
       </div>
 
+      <div style="padding-bottom: 15vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
