--- a/src/html/ldy.html
+++ b/src/html/ldy.html
@@ -117,6 +117,8 @@
         <p>Retrieves a copy from the specified RAM or I/O address, and stores it in the Y index register. The content of the memory location is not affected by the operation.</p>
       </div>
 
+      <div style="padding-bottom: 11vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
