--- a/src/html/nop.html
+++ b/src/html/nop.html
@@ -85,6 +85,8 @@
           sections of code.</p>
       </div>
 
+      <div style="padding-bottom: 29vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
