--- a/src/html/php.html
+++ b/src/html/php.html
@@ -85,6 +85,8 @@
         <p>P register contains the current state of all the system flags.</p>
       </div>
 
+      <div style="padding-bottom: 32vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
