--- a/src/html/rol.html
+++ b/src/html/rol.html
@@ -117,6 +117,8 @@
         <p>The current value of the carry is put into the bit 0, and bit 7 is put into the carry. This makes effectively a circular displacement over 9 bits.</p>
       </div>
 
+      <div style="padding-bottom: 4vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
