--- a/src/html/ror.html
+++ b/src/html/ror.html
@@ -117,6 +117,8 @@
         <p>The contents of the Carry flag is put into the bit 7, and bit 0 is moved to the Carry. This results in a circular displacement of 9 bits.</p>
       </div>
 
+      <div style="padding-bottom: 4vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
