--- a/src/html/rti.html
+++ b/src/html/rti.html
@@ -91,6 +91,8 @@
         <p>Restoring the P register ensures that after the interruption, the execution will continue normally as if nothing had happened.</p>
       </div>
 
+      <div style="padding-bottom: 13vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
