--- a/src/html/rts.html
+++ b/src/html/rts.html
@@ -86,6 +86,8 @@
           JSR could be used to jump to the address (plus 1) stored in the stack.</p>
       </div>
 
+      <div style="padding-bottom: 30vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
