--- a/src/html/sed.html
+++ b/src/html/sed.html
@@ -86,6 +86,8 @@
         <p>CLD, restablishes the normal binary mode of operation.</p>
       </div>
 
+      <div style="padding-bottom: 27vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
