--- a/src/html/sei.html
+++ b/src/html/sei.html
@@ -83,6 +83,8 @@
         <p>Activates the interrupt disable flag, I = 1, effectively disabling interrupts (this only affects maskable interrupts).</p>
       </div>
 
+      <div style="padding-bottom: 37vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
