--- a/src/html/sta.html
+++ b/src/html/sta.html
@@ -125,6 +125,8 @@
         <p>Stores the contents of the accumulator in the address specified by the operand.</p>
       </div>
 
+      <div style="padding-bottom: 15vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
