--- a/src/html/stx.html
+++ b/src/html/stx.html
@@ -97,6 +97,8 @@
         <p>Stores index register X in the address of memory specified by the operand.</p>
       </div>
 
+      <div style="padding-bottom: 31vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
