--- a/src/html/sty.html
+++ b/src/html/sty.html
@@ -97,6 +97,8 @@
         <p>Stores the index register Y in the memory address specified by the operand.</p>
       </div>
 
+      <div style="padding-bottom: 31vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
