--- a/src/html/tay.html
+++ b/src/html/tay.html
@@ -87,6 +87,8 @@
         <p>Transfers the content of the accumulator to the index register Y.</p>
       </div>
 
+      <div style="padding-bottom: 32vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
