--- a/src/html/tsx.html
+++ b/src/html/tsx.html
@@ -87,6 +87,8 @@
         <p>Transfers the contents of the stack register (S) into the index register X.</p>
       </div>
 
+      <div style="padding-bottom: 32vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
