--- a/src/html/txs.html
+++ b/src/html/txs.html
@@ -83,6 +83,8 @@
         <p>Transfers the content of the index register X to the stack pointer register (S).</p>
       </div>
 
+      <div style="padding-bottom: 39vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
