--- a/src/html/tya.html
+++ b/src/html/tya.html
@@ -87,6 +87,8 @@
         <p>Transfer the contents of the index register Y into the Accumulator.</p>
       </div>
 
+      <div style="padding-bottom: 32vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
