--- a/src/html/memory.html
+++ b/src/html/memory.html
@@ -17,14 +17,26 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1 style="text-align:center; padding-top: 40px;">Memory Instructions<br>Placeholder</h1>
+        <h1 id="header-text">Memory Instructions</h1>
       </div>
-      <div class="AllButtonBack"><br>
-        <button title="WIP" class="button buttonOPCODE" onclick="cmdHOME()">WIP</button>
+
+      <div class="memory-grid">
+        <div><button title="DECrement memory by one" class="button buttonOPCODE" onclick="cmdDEC()">DEC</button></div>
+        <div><button title="INCrement memory by one" class="button buttonOPCODE" onclick="cmdINC()">INC</button></div>
+        <div><button title="LoaD Accumulator with memory" class="button buttonOPCODE" onclick="cmdLDA()">LDA</button></div>
+        <div><button title="LoaD index X with memory" class="button buttonOPCODE" onclick="cmdLDX()">LDX</button></div>
+        <div><button title="LoaD index Y with memory" class="button buttonOPCODE" onclick="cmdLDY()">LDY</button></div>
+        <div><button title="STore Accumulator in memory" class="button buttonOPCODE" onclick="cmdSTA()">STA</button></div>
+        <div><button title="STore index X in memory" class="button buttonOPCODE" onclick="cmdSTX()">STX</button></div>
+        <div><button title="STore index Y in memory" class="button buttonOPCODE" onclick="cmdSTY()">STY</button></div>
       </div>
+
+      <div style="padding-bottom: 59vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
       </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
