--- a/src/html/other.html
+++ b/src/html/other.html
@@ -17,11 +17,16 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1 style="text-align:center; padding-top: 40px;">Other Instructions<br>Placeholder</h1>
+        <h1 id="header-text">Other Instructions</h1>
       </div>
-      <div class="AllButtonBack"><br>
-        <button title="WIP" class="button buttonOPCODE" onclick="cmdHOME()">WIP</button>
+
+      <div class="other-grid">
+        <div><button title="Forced Break" class="button buttonOPCODE" onclick="cmdBRK()">BRK</button></div>
+        <div><button title="No OPeration" class="button buttonOPCODE" onclick="cmdNOP()">NOP</button></div>
       </div>
+
+      <div style="padding-bottom: 64vh;"> </div>
+
       <div id="navigation">
         <h2>Navigation:</h2>
         <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
