--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,7 +25,7 @@
 
       <div id="sidebar">
         <button title="View List of All C64 Opcodes" class="button buttonMAIN" onclick="cmdVIEWALL()">View All Opcodes List</button><br>
-        <button title="View List of All Processor Flags" class="button buttonMAIN" onclick="cmdPFLAGS()">Processor Flags</button><br>
+        <!-- <button title="View List of All Processor Flags" class="button buttonMAIN" onclick="cmdPFLAGS()">Processor Flags</button><br> -->
         <button title="View List of All Bitwise Instructions" class="button buttonMAIN" onclick="cmdBITWISE()">Bitwise Instructions</button><br>
         <button title="View List of All Branch Instructions" class="button buttonMAIN" onclick="cmdBRANCH()">Branch Instructions</button><br>
         <button title="View List of All Compare Instructions" class="button buttonMAIN" onclick="cmdCOMPARE()">Compare Instructions</button><br>
